--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.min.css">
-    <title>GreenShop</title>
-</head>
-<body>
-    <header class="header container">
+<header class="header container">
     <div class="header__logo-wrapper">
         <a href="index.html" class="header__logo-link">
             <svg class="header__logo-img" width="35" height="35" viewBox="0 0 35 35" fill="none"
@@ -92,24 +82,6 @@
                 <div class="line bottom-line"></div>
             </div>
         </button>
-        <div class="aside-menu__wrapper">
-    <div class="aside-menu slide-out">
-        <div class="aside-menu__header">
-            <button class="aside-menu__button-close">
-                <div class="rotate-lines">
-                    <div class="line rotate-line1"></div>
-                    <div class="line rotate-line2"></div>
-                </div>
-            </button>
-        </div>
-    </div>
-    <div class="fade hidden"></div>
-</div>
+        @@include("aside-menu.html")
     </div>
 </header>
-    <main class="content container"></main>
-    
-
-    <script src="js/bundle.min.js"></script>
-</body>
-</html>
