chore: small changes

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
     @@include("html/header.html")
     <main class="content container"></main>
     @@include("html/footer.html")
-    <script src="js/bundle.min.js"></script>
+    <script src="js/main.bundle.js"></script>
 </body>
 </html>
